# fitness-baza

./: .gitignore
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: auth.py
backend/app/core/: base.py  config.py  database.py
backend/app/models/: profile.py  user.py
backend/app/schemes/: __init__.py  auth.py  profile.py  user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/api/: auth.ts
frontend/src/layouts/: AuthLayout.tsx
frontend/src/pages/Login/: Login.tsx
frontend/src/pages/Register/: Register.tsx
